name:           nanoAgda
version:        1.0.0.2
category:       Dependent Types
synopsis:       A toy dependently-typed language
description:

        nanoAgda implements a type-checker for a toy dependently-typed
        language.

        The goal of the project is to provide a minimal type-checker
        with dependent types that can be easily fiddled with.

license:        OtherLicense
-- Creative Commons Attribution Share-Alike
license-file:   LICENSE
author:         Jean-Philippe Bernardy
maintainer:     jeanphilippe.bernardy@gmail.com
Cabal-Version:  >= 1.8
tested-with:    GHC==7.4.1
build-type:     Simple

executable nanoAgda
  main-is: Main.hs
  ghc-options: -Wall
  extensions:
     TypeSynonymInstances FlexibleInstances
  other-modules:
     Main
     Common
     Env
     Names
     Terms
     PPrint
     Typing
     Parser
     Lexer
     NormalForm

  build-tools: alex, happy

  build-depends: array
  build-depends: containers
  build-depends: base==4.*
  build-depends: pretty==1.1.*
  build-depends: mtl >= 2.0 && < 2.2
